{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "BasicMovement",
            "id": "049a388e-409b-4a96-b8da-7dba184b517b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c8e5b796-cb0e-4a40-99ed-aed2747fb3c2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1d2acbea-c4e1-4f92-bf2a-293e52ab287c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fade",
                    "type": "Button",
                    "id": "98bf33a3-72ea-47b8-89bb-4f0ccc2f27a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OrbHeal",
                    "type": "Button",
                    "id": "af77a6c0-47da-437b-b3ff-c5e9868839b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OrbDmg",
                    "type": "Button",
                    "id": "a0805627-b706-4f5b-84e0-b71d34afa90c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BioticHeal",
                    "type": "Button",
                    "id": "c04dced6-fefc-445c-8e28-29851d945fa5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BioticGrasp",
                    "type": "Button",
                    "id": "3407d13f-04e5-493c-a6a4-bb971ce7a3d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Coalescence",
                    "type": "Button",
                    "id": "45c4440f-457e-4017-818a-26a3109f0428",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d982f477-4472-49e1-9a42-8e3b891beeef",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bc8130ce-3319-4083-bf3a-f2aa20ba7845",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2024f306-03c3-4d61-bd8c-16d54fcdea8a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "163d49d9-0f16-4d52-ae52-97a6af20ec82",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4556e3cc-d2ee-4ef8-9bf1-2476a5406633",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bcd1f196-ed20-40d0-93d2-7dc21c0ec2f8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f387705f-fe22-4aba-b2dc-aa1e756e86a6",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86328309-29af-48cc-b98b-6d7c20c792c9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OrbHeal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44bdef99-c5e1-4c7e-88bb-d3925edbd09f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OrbDmg",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "067d42c8-a97c-4c6d-9f34-f495a63ae8f4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.1,pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "BioticHeal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "405f273c-a273-4a5d-85f1-1daa0d44a6a3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.1,pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "BioticGrasp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d3bc67a-d25c-4236-8b94-652d0d273e8d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Coalescence",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}